--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -5,13 +5,13 @@
 env:
   node: true
   es6: true
-extends: 'eslint:recommended'
+extends: "eslint:recommended"
 parserOptions:
   ecmaVersion: 2020
 rules:
   indent:
     - error
-    - 4
+    - 2
   linebreak-style:
     - error
     - unix
